objects/BusLine__c.object
<CustomObject>
    <fields>
        <fullName>Bus__c</fullName>
        <label>Bus</label>
        <referenceTo>Bus__c</referenceTo>
        <relationshipLabel>Lines</relationshipLabel>
        <relationshipName>Bus_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <referenceTo>Line__c</referenceTo>
        <relationshipLabel>Buses</relationshipLabel>
        <relationshipName>Bus_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueField__c</fullName>
        <label>UniqueField</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bus Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>BusLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>